# rub-notes

./: README.md  sia.ipynb  ssotap.ipynb  tap.ipynb
conf/: resource-caps
notebooks/: ssotap.ipynb  tap.ipynb
notes/: 20240527-cloudsql-dm44426.txt  20240605-tap-notes.txt  20240625-taplint-validation.txt  20240702-taplint.txt  20240715-notes-for-sprint.txt  20240806-DM-45307-notes.txt  20240821-uws-boe-calculations.txt  20240822-query-history-thoughts.txt  20241015-concurrent-sia-tests.txt  20241024-documenteer-investigation.txt  20241030-concurrent-sia-test.txt  20250317-qserv-api.txt  20250319-tap-qserv-event.txt  20250401-how-to-sciplat-image.txt  20250728-benchmarks.txt  20250917-parquet-findings.txt  20250922-parquet-notes.md  20250922-parquet-notes.txt  20251001-ssotap-benchmarks-binary2.md  20251001-ssotap-benchmarks-binary2.txt  SiaV2_Example.ipynb  resource-caps
notes/notebooks/: SiaV2_Example.ipynb  populate_n_async_tap_jobs.ipynb
sample/: job_run_event.json  test-votable-b2.xml  test-votable.xml  test_schema.xml
src/analytics/: parallel_tester.py  patch_fetch_results_pyvo.py
src/kafka/: tap_producer.py
src/kubernetes/: ephemeral_stats.py  k8s_rm_validator.sh
src/tap/: query_history.py
src/tap/queryhistory/: pyproject.toml
src/tap/queryhistory/queryhistory/: __init__.py  queryhistory_core.py
